Tue Nov 17 17:09:31 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gfsr4.c: added #include <config.h> which was missing

1998-11-04    <bjg@ancho.lanl.gov>

	* ranf.c: fix portability problems on alpha, by ensuring that
	shorts are correctly promoted to longs at the appropriate points

	* rand48.c: fix portability problems by ensuring that shorts are
	correctly promoted to longs at the appropriate points

	* rng-dump.c (main): write out file correctly by using chars
	instead of unsigned long ints, since these can vary in size on
	different architectures

Wed Oct 28 15:02:22 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* rng.c: added #include <string.h> to get prototype for memcpy

Mon Sep 14 20:53:09 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* default.c (gsl_rng_env_setup): added gfsr4

1998-09-10  James Theiler  <jt@lanl.gov>

	* gfsr4.c: added new random number generator

	* Makefile.am: added gfsr4.c to SOURCES list

	* gsl_rng.h: added gfsr4

	* test.c: added gfsr4

	* benchmark.c: added gfsr4

Mon Aug 10 22:12:13 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* rng-dump.c: program to write out 3 million random numbers,
 	suitable for testing with DIEHARD.

Tue Aug  4 19:51:57 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* default.c (gsl_rng_env_setup): send default/enviroment output to
 	stderr

Mon Aug  3 18:25:52 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* mt.c: made constants static since they shouldn't be exported,
 	added some speed improvements from Cokus' code (not all of them
 	since they seemed to use more registers than available on the
 	pentium).

Thu Jul  9 13:56:20 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* slatec.c: renamed cmlib.c to slatec.c

	* transputer.c: renamed tds.c to transputer.c so the name is a bit
 	more obvious

	* random.c: renamed random0 functions to random8, since obviously
 	we can't have 0 bytes of state
	
	* default.c (gsl_rng_env_setup): made gsl_rng_mt19937 the default
 	generator

Wed Jul  8 17:06:54 1998  Brian Gough  <bjg@vvv.lanl.gov>
